# selfhosted-rag-doc-chat-prototype

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_TEST.md  FEATURE_PARITY_CHECKLIST.md  GEMINI.md  PROJECT_MAP.md  README.md  README_FIRST.md  architecture.html  architecture.md  conftest.py  direct_integration_test.py  docker-compose.frontend.yaml  docker-compose.temporal.yaml  docker-compose.yaml  memory_map.md  monitor_workers.sh  planning.txt  pom.xml  pyproject.toml  ruff.toml  run-chat-system.sh  run_full_ingestion.py  run_full_normalization.py  run_full_normalization_test.py  test_docling_simple.py  test_llama_load.py  verify_normalization_real_world.py
.claude/: settings.local.json
.github/workflows/: gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
astro-frontend/: Dockerfile.frontend  README.md  package-lock.json  package.json  test.sh
doc-ingest-chat/: .dockerignore  .env  Dockerfile.pipeline-init  Dockerfile.whisperx  Dockerfile.worker  Dockerfile.worker.inprogress  GEMINI.md  __init__.py  apimain.py  docker-compose-complete.yaml  ingest-dockercompose.yaml  ingest-svc.env  ollama-requirements.txt  run-compose-cpu.sh  run-compose.sh  run_consumer.py  run_gatekeeper.py  run_ocr_worker.py  run_producer.py  run_retype_llm_worker.py  run_temporal_worker.py  run_whisperx_worker.py  test.env
doc-ingest-chat/.claude/: settings.local.json
doc-ingest-chat/api/: endpoints.py
doc-ingest-chat/chat/: chroma_chat.py
doc-ingest-chat/config/: env_strategy.py  llama_strategy.py  settings.py
doc-ingest-chat/handlers/: __init__.py  base_handler.py  mp3_handler.py  mp4_handler.py  pdf_handler.py  text_handler.py
doc-ingest-chat/models/: data_models.py  query.py  transcription_input.py
doc-ingest-chat/pipeline-init/: deploy_nifi_processors.sh  entrypoint.sh  flush_redis.py  nuke_nifi.py
doc-ingest-chat/processors/: document_processor.py  text_processor.py
doc-ingest-chat/prompts/: chat_prompts.py
doc-ingest-chat/services/: chat_session_service.py  database.py  database_qdrant_sparse_testing.py  dependencies.py  job_service.py  parquet_service.py  rag_service.py  redis_service.py
doc-ingest-chat/sql/: DB.md  schema.sql
doc-ingest-chat/temporal_worker/: activities.py  workflows.py
doc-ingest-chat/tests/: conftest.py  test_chat_session_service.py  test_consumer_graph.py  test_consumer_utils.py  test_consumer_worker.py  test_database_init.py  test_database_service.py  test_database_types.py  test_document_processor.py  test_ocr_graph.py  (+27 more)
docs/: analytics.md  deep-dive.md  edge-agent.md  operations.md  overview.md  quickstart.md
infra/: haproxy-entrypoint.sh  render-haproxy-cfg.sh
mqtt_agent_hub/: .env  Dockerfile.hub  README.md  acl  config.py  docker-compose.yaml  edge_agent.py  hub_server.py  mosquitto.conf  passwd  pyproject.toml  sre_prompt.py  test_mqtt_publisher.py
mqtt_agent_hub/api/: endpoints.py
mqtt_agent_hub/astro-dashboard/: Dockerfile.dashboard  package-lock.json  package.json  test.sh
mqtt_agent_hub/astro-dashboard/src/components/: ThemePicker.astro
mqtt_agent_hub/astro-dashboard/src/layouts/: Layout.astro
mqtt_agent_hub/astro-dashboard/src/pages/: index.astro
mqtt_agent_hub/mqtt/: client.py  registry.py
mqtt_agent_hub/tests/: test_endpoints.py  test_mqtt_client.py  test_registry.py
nifi/: Dockerfile  README.md  docker-compose.yml  nifi_bootstrap.py  nifi_client.py  setup_flow.py
openspec/: config.yaml  design.md  proposal.md  tasks.md
planning/: INFRA.md  NIFI-PROCESSOR-SPECS.md  PLAN-NIFI-CONVERSION-FINAL.md  PLAN-NIFI-CONVERSION.md  phase2-migrating-producer.md
project-docs/: agentic_workflow_analysis.md  ai_behavior.md  arch.md  architecture_overview.md  custom_vs_langchain.md  debugging_and_metrics.md  production_considerations.md
quarkus/: README.md  docker-compose.yaml  pom.xml
shared/: config.py  defaults.py  env_names.py  models.py  topics.py  utils.py
test_normalization_output_parallel/: real-slice-db6d840d.md  real_slice.txt  small_test.txt
tests/: test_producer_worker.py
(+156 files in other folders)
