[project]
name = "selfhosted-rag-doc-chat-prototype"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.66",
    "langsmith>=0.4.0",
    "llama-cpp-python>=0.3.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "redis>=6.2.0",
    "qdrant-client>=1.16.2",
    "chromadb>=1.0.15",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.1",
]
