[project]
name = "selfhosted-rag-doc-chat-prototype"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-ollama>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langsmith>=0.1.0,<0.4.0",
    "llama-cpp-python>=0.3.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "redis>=6.2.0",
    "qdrant-client>=1.16.2",
    "chromadb>=0.5.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.1",
    "mmh3>=5.2.1",
    "duckdb>=1.5.1",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "transformers>=5.5.0",
    "pillow>=12.2.0",
    "pdf2image>=1.17.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.9",
    "more-itertools>=11.0.1",
    "beautifulsoup4>=4.14.3",
    "whisperx>=3.4.5",
    "ftfy>=6.3.1",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "docling[easyocr]>=2.85.0",
    "langgraph>=0.2.76",
    "langgraph-checkpoint>=2.1.2",
    "langgraph-sdk>=0.1.74",
    "langgraph-prebuilt>=0.6.5",
    "pytesseract>=0.3.13",
    "pyannote-audio>=3.3.2",
    "pyannote-core>=5.0.0",
    "pyannote-database>=5.1.3",
    "pyannote-metrics>=3.2.1",
    "pyannote-pipeline>=3.0.1",
    "outlines>=0.0.46",
    "optuna>=4.4.0",
    "charset-normalizer>=3.4.2",
    "pyyaml>=6.0.2",
    "psutil>=7.0.0",
    "regex>=2024.11.6",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-community>=0.3.0,<0.4.0",
]
