[project]
name = "mqtt-agent-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "paho-mqtt>=2.0.0",
    "pydantic>=2.11.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.3.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.0",
]

[tool.uv.sources]
shared = { path = "../shared" }
